# medical-ingestion-system

./: .env.example  .gitignore  README.md  agentic-prototype.ipynb  main.py  medical_output.csv  pipeline.py  pyproject.toml
agents/: __init__.py  document_understanding.py  entity_extraction.py  layout_analysis.py  normalization.py
exporters/: __init__.py  csv_exporter.py  pdf_exporter.py
prototype/: agentic-prototype.ipynb  prototype.ipynb
